# aisecurity-modernized

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
aisecurity/: __init__.py  config.py  crypto.py  engine.py  gallery.py  recognizer.py  stream.py
docs/: MIGRATION.md
scripts/: benchmark.py  enroll.py  recognize.py
tests/: __init__.py  test_crypto.py  test_engine.py  test_gallery.py
